// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/kapetaniosci/pipe/pkg/model";

import "validate/validate.proto";
import "pkg/model/application.proto";

// ApplicationLiveState represents the full live state information of an application.
message ApplicationLiveState {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    string env_id = 2 [(validate.rules).string.min_len = 1];
    string piped_id = 3 [(validate.rules).string.min_len = 1];
    string project_id = 4 [(validate.rules).string.min_len = 1];
    ApplicationKind kind = 5 [(validate.rules).enum.defined_only = true];

    KubernetesApplicationLiveState kubernetes_state = 6;
    TerraformApplicationLiveState terraform_state = 7;
    CloudRunApplicationLiveState cloudrun_state = 8;
    LambdaApplicationLiveState lambda_state = 9;

    int64 created_at = 14 [(validate.rules).int64.gt = 0];
    int64 updated_at = 15 [(validate.rules).int64.gt = 0];
}

message KubernetesApplicationLiveState {
    repeated KubernetesResource resources = 1;
}

message TerraformApplicationLiveState {
}

message CloudRunApplicationLiveState {
}

message LambdaApplicationLiveState {
}

// KubernetesResource represents the state of a single kubernetes resource object.
message KubernetesResource {
    // The unique ID across the whole cluster generated by Kubernetes.
    string id = 1 [(validate.rules).string.min_len = 1];
    // The list of unique IDs of the owners that depended by this resource.
    // The owner is another resource that created and managing this resource.
    repeated string owner_ids = 2;
    repeated string parrent_ids = 3;
    // The unique name for the type of resource.
    string name = 4 [(validate.rules).string.min_len = 1];
    // The api version of this resource represented by "group/version".
    string api_version = 5 [(validate.rules).string.min_len = 1];
    // The kind of this resource.
    string kind = 6 [(validate.rules).string.min_len = 1];
    // The namespace this resource belongs to.
    // This can be empty for non-namespaced resources.
    string namespace = 7;
    // The timestamp when this resource was created.
    int64 created_at = 14 [(validate.rules).int64.gt = 0];
    // The timestamp of the last time when this resource was updated.
    int64 updated_at = 15 [(validate.rules).int64.gt = 0];
}
